--- a/style.css
+++ b/style.css
@@ -82,6 +82,20 @@ nav a {
     padding: 0 12px 11px;
 } */
 
+figcaption {
+    padding-top: 75px;
+    padding-left: 23.43%;
+    font-size: 16px;
+    line-height: 150%;
+    color: #71870E;
+    opacity: 0.8;
+}
+
+.philosophy {
+    margin-top: 100px;
+    margin-bottom: 100px;
+}
+
 .font_green {
     color: #71870E;
 }
@@ -111,6 +125,9 @@ nav a {
     width: 225px;
     height: 75px;
     padding-top: 50px;
+    margin-top: 25px;
+    margin-left: 15.15%;
+    font-size: 16px;
 
 
 }
@@ -213,41 +230,51 @@ nav a {
 } */
 
 
-/* .grid {
-    display: grid;
-  width: 100%;
-  height: 100%;
-  grid-template-areas: "philo thought";
-  grid-template-rows: auto;
-  grid-template-columns: 105px 1fr;
-}
 
-.grid > h2 {
-    grid-area: philo;
-}
-
-.grid > p {
-    grid-area: thought;
-}
 
 .philosophy_text_part {
     display: flex;
     flex-direction: column;
-} */
+}
 
-/* img { max-width: 100%;} */
+.float {
+    padding-top: 83px;
+    padding-right: 10.5%;
+    padding-left: 10.5%;
+}
+
+
 .text_block {
     clear: both;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 16px;
+    line-height: 175%;
+    color: #000000;
+    opacity: 0.85;
+
+    margin-top: 100px;
+    margin-left: 35.25%;
+}
+
+.text_block p {
+
+    margin-top: 36px;
+}
+
+.text_block p:first-child {
+    margin-top: 0;
 }
 
 .groupe_img {
     padding-right: 139px;
+    padding-left: 37px;
     position: relative;
 }
 
 .small_img {
     position: absolute;
-    left: 56.88%;
+    left: 59.5%;
     top: 32.8%;
 }
 
@@ -273,6 +300,8 @@ nav a {
     .philosophy {
         display: flex;
         flex-direction: column;
+        margin-top: 0;
+        margin-bottom: 0;
     }
 
     .philosophy_text_part {
@@ -283,6 +312,7 @@ nav a {
 
     .float {
         text-align: center;
+        padding-top: 0;
     }
 
     .main_thought {
@@ -295,25 +325,15 @@ nav a {
 
     .text_block {
         margin-top: 25px;
-        font-style: normal;
-        font-weight: 400;
-        font-size: 16px;
-        line-height: 175%;
-        color: #000000;
-        opacity: 0.85;
+        margin-left: 0;
+
     }
 
-    .text_block p {
-
-        margin-bottom: 36px;
-    }
-
-    .text_block p:last-child {
-        margin-bottom: 0;
-    }
 
     .button {
         align-self: flex-end;
+        margin-top: 0;
+
     }
 
     .desktop {
